fix: canvas should be left-aligned in spectrum view, only a problem when there's no vertical scrollbar.

--- a/htdocs/css/main.css
+++ b/htdocs/css/main.css
@@ -28,7 +28,7 @@ body.spectool-web {
 .spectool-web #spectrum-viewer canvas {
   position: absolute;
   top: 0;
-  right: 0;
+  left: 0;
 }
 
 .spectool-web #frequency-axis ul {
